fix: Fixed CTA button size on mobile devices

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ footer {
   border-top: 1px solid #00000033;
   padding: 1rem;
 
-  margin-top: 12rem;
+  margin-top: 10rem;
 
   display: flex;
   flex-direction: column;
@@ -178,6 +178,16 @@ footer .footer-link {
   }
   .content .elixir-logo img {
     max-height: 23rem;
+  }
+  .content .about #cta {
+    width: 80%;
+  }
+
+  footer .sm-links {
+    display: flex;
+    gap: 1.5rem;
+    margin: 2rem 0;
+  
   }
 
 }
